# simnibs-reader

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENSE  README.md  classlist.txt  index.html  loaders-mask.py  mkdocs.yml  pyproject.toml  simnibs-reader.py
__later__/TODOclaude-explain-classes/: index.html
__prompting__/: 1-start-plan.txt  2-plan.txt  3-correcting-architecture  4-docs  logo  tmp.md
api/stats/: index.html
docs/: claude-explain.md  getting-started.md  index.md  tutorials.md
docs/__later__/: TODOclaude-explain-classes.md
docs/_example/: simnibs-bids-tutorial.py  simnibs-reader-tutorial.ipynb
docs/api/: accessor.md  index.md  postprocess.md  roi.md  stats.md
docs/example/: simnibs-bids-tutorial.ipynb  simnibs_bids_like_tutorial.ipynb  snr-optimization-tutorial.ipynb  snr-simulation-tutorial.ipynb
example/freesurfer_guide/: freesurfer_roi_extraction.ipynb
example/results/: sub01_fef_cleaned.tsv  sub01_fef_roi.tsv
search/: search_index.json
simnibs_reader/: _0_anatomical_preparer.py  _1_preprocessing.py  _2_features_extraction.py  __init__.py  _pipeline_io.py  _typing.py  field.py  mesh.py  reader.py  roi.py  simnibs-reader.py
simnibs_reader/__old__/: exporter.py  reader.py
simnibs_reader/__tmp-to-reinject__/: _1_preprocessing.py  _2_features_extraction.py
simnibs_reader/_example/: simnibs-reader-example.py
simnibs_reader/core/: __init__.py  _base.py  optimization.py  segmentation.py  simulation.py
simnibs_reader/efield/: __init__.py  accessor.py  labels.py  postprocess.py  roi.py
simnibs_reader/io/: __init__.py  _pipeline_io.py  export.py  loader.py  nifti.py
site/: 404.html  index.html  objects.inv  sitemap.xml
tutorials/: index.html
(+35 files in other folders)
