[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simnibs-analyze"
version = "0.0.1"
description = "Modular pipeline for brain stimulation modelling (tDCS/TMS) with SimNIBS"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "nibabel>=5.0",
    "nilearn>=0.10",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyvista>=0.43",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
citations = [
    "duecredit>=0.9",
]

[project.scripts]
simnibs-analyze = "simnibs_analyze.run:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["simnibs_analyze*"]

[tool.ruff]
line-length = 100
target-version = "py310"
