[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simnibs-reader"
version = "0.1.0"
description = "Lightweight reader for SimNIBS output directories (segmentation, simulation, optimization)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "nibabel>=5.0",
    "nilearn>=0.10",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]

opti = [
    "h5py>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simnibs_reader*"]

[tool.ruff]
line-length = 100
target-version = "py310"
